Fixed: - Fix issues