@@ -1,7 +1,6 @@
 package com.github.nounitheodora.uxsniffer.inspections;
 
 import com.github.nounitheodora.uxsniffer.UxSnifferBundle;
-import com.intellij.codeInspection.ProblemHighlightType;
 import com.intellij.codeInspection.ProblemsHolder;
 import com.intellij.psi.PsiElementVisitor;
 import com.intellij.psi.PsiFile;
@@ -106,7 +105,7 @@ public class DirectDomInspection extends AbstractVueSmellInspection {
 
     @NotNull String buildMessage(@NotNull List<String> apis) {
         if (apis.size() == 1) {
-            return UxSnifferBundle.message("inspection.direct.dom.single", apis.get(0));
+            return UxSnifferBundle.message("inspection.direct.dom.single", apis.getFirst());
         }
         return UxSnifferBundle.message("inspection.direct.dom.multiple", formatApiList(apis));
     }
