@@ -1,7 +1,6 @@
 package com.github.nounitheodora.uxsniffer.inspections;
 
 import com.github.nounitheodora.uxsniffer.UxSnifferBundle;
-import com.intellij.codeInspection.ProblemHighlightType;
 import com.intellij.codeInspection.ProblemsHolder;
 import com.intellij.psi.PsiElementVisitor;
 import com.intellij.psi.PsiFile;
@@ -93,7 +92,7 @@ public class EnumImplicitValuesInspection extends AbstractVueSmellInspection {
 
     @NotNull String buildMessage(@NotNull List<String> enumNames) {
         if (enumNames.size() == 1) {
-            return UxSnifferBundle.message("inspection.enum.implicit.single", enumNames.get(0));
+            return UxSnifferBundle.message("inspection.enum.implicit.single", enumNames.getFirst());
         }
         StringBuilder sb = new StringBuilder();
         for (int i = 0; i < enumNames.size(); i++) {
