@@ -1,7 +1,6 @@
 package com.github.nounitheodora.uxsniffer.inspections;
 
 import com.github.nounitheodora.uxsniffer.UxSnifferBundle;
-import com.intellij.codeInspection.ProblemHighlightType;
 import com.intellij.codeInspection.ProblemsHolder;
 import com.intellij.psi.PsiElementVisitor;
 import com.intellij.psi.PsiFile;
@@ -88,7 +87,7 @@ public class UncontrolledComponentInspection extends AbstractVueSmellInspection 
 
     @NotNull String buildMessage(@NotNull List<String> tags) {
         if (tags.size() == 1) {
-            return UxSnifferBundle.message("inspection.uncontrolled.single", tags.get(0));
+            return UxSnifferBundle.message("inspection.uncontrolled.single", tags.getFirst());
         }
         return UxSnifferBundle.message("inspection.uncontrolled.multiple", tags.size());
     }
